# berkeleytutorial

./: Dockerfile  LICENSE  README.md  requirements.txt
tutorial/: common.py
tutorial/01_sparseRegression/: Pgeneral  Qgeneral  sparseRegression.ipynb  sparseRegression.py
tutorial/01_sparseRegression/.ipynb_checkpoints/: sparseRegression-checkpoint.ipynb
tutorial/02_runOptimizeModel/: .gitignore  optParams.txt  optValue.txt  outputTargets.out  runOptimizeModel.ipynb  runOptimizeModel.py
tutorial/02_runOptimizeModel/.ipynb_checkpoints/: runOptimizeModel-checkpoint.ipynb
tutorial/03_multiResolutionChaos/: multiResolutionChaos.ipynb  multiResolutionChaos.py
tutorial/03_multiResolutionChaos/.ipynb_checkpoints/: multiResolutionChaos-checkpoint.ipynb
tutorial/tuliplib/tulipBin/: CMakeCache.txt  Makefile  cmake_install.cmake
tutorial/tuliplib/tulipBin/py/: CMakeLists.txt  Makefile  cmake_install.cmake  pyOPT.py  tulipAC.py  tulipACPYTHON_wrap.cxx  tulipCM.py  tulipCMPYTHON_wrap.cxx  tulipDA.py  tulipDAPYTHON_wrap.cxx  tulipUQ.py  tulipUQPYTHON_wrap.cxx
tutorial/tuliplib/tulipBin/src/: Makefile  cmake_install.cmake
tutorial/tuliplib/tulipBin/test/: CMakeLists.txt
tutorial/tuliplib/tulipBin/test/cppTests/01_runLPN/: CMakeLists.txt  test_RunLPNModel.cpp
tutorial/tuliplib/tulipBin/test/cppTests/02_optLPN/: CMakeLists.txt  test_optLPNModel.cpp
tutorial/tuliplib/tulipBin/test/cppTests/03_useBasis/: CMakeLists.txt  test_useBasis.cpp
tutorial/tuliplib/tulipBin/test/pyTests/01_TUTORIAL/: 01_TUTORIAL_oneDimensionalQuadrature.py  02_TUTORIAL_handlingSamples.py  03_TUTORIAL_usingBasis.py  04_TUTORIAL_RVMRegression.py  05_TUTORIAL_ReadApproximant.py  06_TUTORIAL_MWBasis_ArbitraryPDF.py  07_TUTORIAL_SimpleQuadraticModel.py  08_TUTORIAL_NelderMeadOptimization.py  09_TUTORIAL_RunningDream.py
