# BUILD PYTHON MODULES
FIND_PACKAGE(SWIG)

IF(SWIG_FOUND)
  
  INCLUDE(UseSWIG)

  FIND_PACKAGE(PythonLibs 3)

  MESSAGE(STATUS "Python Library Version: ${PYTHONLIBS_VERSION_STRING}")

  INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

  INCLUDE_DIRECTORIES(
    "${CMAKE_SOURCE_DIR}/src"
    "${CMAKE_SOURCE_DIR}/src/actions/"
    "${CMAKE_SOURCE_DIR}/src/models/"
    "${CMAKE_SOURCE_DIR}/src/data/"
    "${CMAKE_SOURCE_DIR}/src/tools/")

  SET(CMAKE_SWIG_FLAGS "-Wall")

  SET(CMAKE_SWIG_OUTDIR ${CMAKE_BINARY_DIR}/py)

  SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/py)

  SET_SOURCE_FILES_PROPERTIES(${PY_I_UQ} PROPERTIES CPLUSPLUS ON)
  SET_SOURCE_FILES_PROPERTIES(${PY_I_CM} PROPERTIES CPLUSPLUS ON)
  SET_SOURCE_FILES_PROPERTIES(${PY_I_AC} PROPERTIES CPLUSPLUS ON)
  SET_SOURCE_FILES_PROPERTIES(${PY_I_DA} PROPERTIES CPLUSPLUS ON)

  SWIG_ADD_MODULE(tulipUQ python ${PY_I_UQ})
  SWIG_ADD_MODULE(tulipCM python ${PY_I_CM})
  SWIG_ADD_MODULE(tulipAC python ${PY_I_AC})
  SWIG_ADD_MODULE(tulipDA python ${PY_I_DA})

  SWIG_LINK_LIBRARIES(tulipUQ tulip ${PYTHON_LIBRARIES} ${ARMADILLO_LIBRARIES} ${Boost_LIBRARIES})
  SWIG_LINK_LIBRARIES(tulipCM tulip ${PYTHON_LIBRARIES} ${ARMADILLO_LIBRARIES} ${Boost_LIBRARIES})
  SWIG_LINK_LIBRARIES(tulipAC tulip ${PYTHON_LIBRARIES} ${ARMADILLO_LIBRARIES} ${Boost_LIBRARIES})
  SWIG_LINK_LIBRARIES(tulipDA tulip ${PYTHON_LIBRARIES} ${ARMADILLO_LIBRARIES} ${Boost_LIBRARIES})
  
ENDIF()
